  patcher does, too, but it should fail immediately upon wrong user-input]
- remove build directory before trying to build a game, not afterwards, so that
  in case a build failed in batch-mode, the next one can be tried without issues
- fixed that character mods were not applicable to Cliff Super Mario Bros. Wii

::misc. changes:
- drop support for Awesomer Super Luigi Mini (broken and offline)

v7.3.0 (20160827):
::internal changes:
- modularize common.sh
- supply megadl (32 and 64 bit)

::downloader changes:
- changed download links to Mediafire so that they can automatically be
  downloaded using wget, this makes Cliff Super Mario Bros., Ghostly Super
  Mario Boos Wii, MLG Super Mario Bros. Wii, Pokemon Neo X, Pokemon Neo Y
  and Pokemon Red Ruby auto-downloadable
- changed download links to Sendspace so that they can automatically be
  downloaded using wget, this makes Challenging Super Mario Bros. Wii:
  Virtual Special auto-downloadable
- include megadl a tool that can download files from Mega using commandline,
  this makes Pokemon Delta Emerald, Pokemon Rutile Ruby, Pokemon Star Sapphire
  and Bravely Second Uncensored auto-downloadable

::misc. changes:
- update Cliff Super Mario Bros. to version 1.0.5

v7.2.2 (20160823):
::bug fixes
- fix PATCHIMAGE_3DS_DIR setup when no ${HOME}/.patchimage.rc exists
- fix PATCHIMAGE_ROM_DIR setup when no ${HOME}/.patchimage.rc exists
- fixed that the script expected wrong parameter --show-downloadlink
  instead of correct --show-download
- fix error messages or required user-input during batch-build by
  creating a separate build directory, then create the mod and before
  the next build is done that build directory is removed and re-created
  - when ${PWD} is writable that will be ${PWD}/patchimage_build, else
    it will be ${HOME}/patchimage_build

::misc. changes
- use 'read -er' instead of 'read -r' so that during user-input readline
  features like path-completion can be used.