@@ -13,6 +13,7 @@ v7.3.1:
 
 ::misc. changes:
 - drop support for Awesomer Super Luigi Mini (broken and offline)
+- update Cliff Super Mario Bros. to version 1.1
 
 v7.3.0 (20160827):
 ::internal changes:
